mw-kreator-regul-biznesowych/app-modul-silnik-regul/src/main/java/reguly/antlr/gen/RegulyBiznesoweParser.java
// Generated from RegulyBiznesowe.g4 by ANTLR 4.7.2

package reguly.antlr.gen;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RegulyBiznesoweParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, LITERAL_JESLI=8, 
		LITERAL_WTEDY=9, LITERAL_ORAZ=10, LITERAL_LUB=11, LITERAL_WYSWIETL_KOMUNIKAT=12, 
		LITERAL_W_PRZECIWNYM_WYPADKU=13, LITERAL_SPRAWDZ_REGULE=14, OPERATOR_POROWNANIA=15, 
		NO=16, NZ=17, INT=18, NUMERIC_VALUE=19, IDENTIFIER=20, RULECOMMENT=21, 
		NEWLINE=22, WS=23;
	public static final int
		RULE_grupa_regul = 0, RULE_regula = 1, RULE_nazwa_reguly = 2, RULE_parametry_reguly = 3, 
		RULE_tresc_reguly = 4, RULE_akcja_warunek_spelniony = 5, RULE_akcja_w_przeciwnym_wypadku = 6, 
		RULE_warunek_reguly = 7, RULE_zlozone_wyrazenie_logiczne = 8, RULE_wyrazenie_logiczne = 9, 
		RULE_warunek = 10, RULE_parametr = 11, RULE_typ = 12, RULE_nazwa = 13, 
		RULE_akcja = 14, RULE_akcja_wyswietl_komunikat = 15, RULE_akcja_sprawdz_regule = 16, 
		RULE_parametr_akcji = 17, RULE_parametr_akcji_sprawdz_regule_wywolanie_innej_reguly = 18, 
		RULE_parametry_podawane_do_innej_reguly = 19, RULE_tekst_wielowyrazowy = 20, 
		RULE_operator_logiczny = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"grupa_regul", "regula", "nazwa_reguly", "parametry_reguly", "tresc_reguly", 
			"akcja_warunek_spelniony", "akcja_w_przeciwnym_wypadku", "warunek_reguly", 
			"zlozone_wyrazenie_logiczne", "wyrazenie_logiczne", "warunek", "parametr", 
			"typ", "nazwa", "akcja", "akcja_wyswietl_komunikat", "akcja_sprawdz_regule", 
			"parametr_akcji", "parametr_akcji_sprawdz_regule_wywolanie_innej_reguly", 
			"parametry_podawane_do_innej_reguly", "tekst_wielowyrazowy", "operator_logiczny"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'n=>'", "'p=>'", "','", "'r=>'", "'\"'", null, null, 
			null, null, null, null, null, null, "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "LITERAL_JESLI", "LITERAL_WTEDY", 
			"LITERAL_ORAZ", "LITERAL_LUB", "LITERAL_WYSWIETL_KOMUNIKAT", "LITERAL_W_PRZECIWNYM_WYPADKU", 
			"LITERAL_SPRAWDZ_REGULE", "OPERATOR_POROWNANIA", "NO", "NZ", "INT", "NUMERIC_VALUE", 
			"IDENTIFIER", "RULECOMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RegulyBiznesowe.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RegulyBiznesoweParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Grupa_regulContext extends ParserRuleContext {
		public List<RegulaContext> regula() {
			return getRuleContexts(RegulaContext.class);
		}
		public RegulaContext regula(int i) {
			return getRuleContext(RegulaContext.class,i);
		}
		public TerminalNode EOF() { return getToken(RegulyBiznesoweParser.EOF, 0); }
		public Grupa_regulContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grupa_regul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterGrupa_regul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitGrupa_regul(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitGrupa_regul(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Grupa_regulContext grupa_regul() throws RecognitionException {
		Grupa_regulContext _localctx = new Grupa_regulContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grupa_regul);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			regula();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(45);
				regula();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegulaContext extends ParserRuleContext {
		public Nazwa_regulyContext nazwa_reguly() {
			return getRuleContext(Nazwa_regulyContext.class,0);
		}
		public Parametry_regulyContext parametry_reguly() {
			return getRuleContext(Parametry_regulyContext.class,0);
		}
		public Tresc_regulyContext tresc_reguly() {
			return getRuleContext(Tresc_regulyContext.class,0);
		}
		public RegulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterRegula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitRegula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitRegula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegulaContext regula() throws RecognitionException {
		RegulaContext _localctx = new RegulaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_regula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__0);
			setState(54);
			nazwa_reguly();
			setState(55);
			parametry_reguly();
			setState(56);
			tresc_reguly();
			setState(57);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nazwa_regulyContext extends ParserRuleContext {
		public NazwaContext nazwa() {
			return getRuleContext(NazwaContext.class,0);
		}
		public Nazwa_regulyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nazwa_reguly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterNazwa_reguly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitNazwa_reguly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitNazwa_reguly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nazwa_regulyContext nazwa_reguly() throws RecognitionException {
		Nazwa_regulyContext _localctx = new Nazwa_regulyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nazwa_reguly);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__2);
			setState(60);
			nazwa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parametry_regulyContext extends ParserRuleContext {
		public List<ParametrContext> parametr() {
			return getRuleContexts(ParametrContext.class);
		}
		public ParametrContext parametr(int i) {
			return getRuleContext(ParametrContext.class,i);
		}
		public Parametry_regulyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametry_reguly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterParametry_reguly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitParametry_reguly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitParametry_reguly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parametry_regulyContext parametry_reguly() throws RecognitionException {
		Parametry_regulyContext _localctx = new Parametry_regulyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametry_reguly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(T__3);
			setState(63);
			parametr();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(64);
				match(T__4);
				setState(65);
				parametr();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tresc_regulyContext extends ParserRuleContext {
		public TerminalNode LITERAL_JESLI() { return getToken(RegulyBiznesoweParser.LITERAL_JESLI, 0); }
		public TerminalNode NO() { return getToken(RegulyBiznesoweParser.NO, 0); }
		public Warunek_regulyContext warunek_reguly() {
			return getRuleContext(Warunek_regulyContext.class,0);
		}
		public TerminalNode NZ() { return getToken(RegulyBiznesoweParser.NZ, 0); }
		public TerminalNode LITERAL_WTEDY() { return getToken(RegulyBiznesoweParser.LITERAL_WTEDY, 0); }
		public Akcja_warunek_spelnionyContext akcja_warunek_spelniony() {
			return getRuleContext(Akcja_warunek_spelnionyContext.class,0);
		}
		public TerminalNode LITERAL_W_PRZECIWNYM_WYPADKU() { return getToken(RegulyBiznesoweParser.LITERAL_W_PRZECIWNYM_WYPADKU, 0); }
		public Akcja_w_przeciwnym_wypadkuContext akcja_w_przeciwnym_wypadku() {
			return getRuleContext(Akcja_w_przeciwnym_wypadkuContext.class,0);
		}
		public Tresc_regulyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tresc_reguly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterTresc_reguly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitTresc_reguly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitTresc_reguly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tresc_regulyContext tresc_reguly() throws RecognitionException {
		Tresc_regulyContext _localctx = new Tresc_regulyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tresc_reguly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__5);
			setState(72);
			match(LITERAL_JESLI);
			setState(73);
			match(NO);
			setState(74);
			warunek_reguly();
			setState(75);
			match(NZ);
			setState(76);
			match(LITERAL_WTEDY);
			setState(77);
			akcja_warunek_spelniony();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LITERAL_W_PRZECIWNYM_WYPADKU) {
				{
				setState(78);
				match(LITERAL_W_PRZECIWNYM_WYPADKU);
				setState(79);
				akcja_w_przeciwnym_wypadku();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Akcja_warunek_spelnionyContext extends ParserRuleContext {
		public AkcjaContext akcja() {
			return getRuleContext(AkcjaContext.class,0);
		}
		public Akcja_warunek_spelnionyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_akcja_warunek_spelniony; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterAkcja_warunek_spelniony(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitAkcja_warunek_spelniony(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitAkcja_warunek_spelniony(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Akcja_warunek_spelnionyContext akcja_warunek_spelniony() throws RecognitionException {
		Akcja_warunek_spelnionyContext _localctx = new Akcja_warunek_spelnionyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_akcja_warunek_spelniony);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(82);
			akcja();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Akcja_w_przeciwnym_wypadkuContext extends ParserRuleContext {
		public AkcjaContext akcja() {
			return getRuleContext(AkcjaContext.class,0);
		}
		public Akcja_w_przeciwnym_wypadkuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_akcja_w_przeciwnym_wypadku; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterAkcja_w_przeciwnym_wypadku(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitAkcja_w_przeciwnym_wypadku(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitAkcja_w_przeciwnym_wypadku(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Akcja_w_przeciwnym_wypadkuContext akcja_w_przeciwnym_wypadku() throws RecognitionException {
		Akcja_w_przeciwnym_wypadkuContext _localctx = new Akcja_w_przeciwnym_wypadkuContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_akcja_w_przeciwnym_wypadku);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(84);
			akcja();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Warunek_regulyContext extends ParserRuleContext {
		public List<Zlozone_wyrazenie_logiczneContext> zlozone_wyrazenie_logiczne() {
			return getRuleContexts(Zlozone_wyrazenie_logiczneContext.class);
		}
		public Zlozone_wyrazenie_logiczneContext zlozone_wyrazenie_logiczne(int i) {
			return getRuleContext(Zlozone_wyrazenie_logiczneContext.class,i);
		}
		public List<Operator_logicznyContext> operator_logiczny() {
			return getRuleContexts(Operator_logicznyContext.class);
		}
		public Operator_logicznyContext operator_logiczny(int i) {
			return getRuleContext(Operator_logicznyContext.class,i);
		}
		public Warunek_regulyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_warunek_reguly; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterWarunek_reguly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitWarunek_reguly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitWarunek_reguly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Warunek_regulyContext warunek_reguly() throws RecognitionException {
		Warunek_regulyContext _localctx = new Warunek_regulyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_warunek_reguly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			zlozone_wyrazenie_logiczne();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LITERAL_ORAZ || _la==LITERAL_LUB) {
				{
				{
				setState(87);
				operator_logiczny();
				setState(88);
				zlozone_wyrazenie_logiczne();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Zlozone_wyrazenie_logiczneContext extends ParserRuleContext {
		public List<Wyrazenie_logiczneContext> wyrazenie_logiczne() {
			return getRuleContexts(Wyrazenie_logiczneContext.class);
		}
		public Wyrazenie_logiczneContext wyrazenie_logiczne(int i) {
			return getRuleContext(Wyrazenie_logiczneContext.class,i);
		}
		public List<WarunekContext> warunek() {
			return getRuleContexts(WarunekContext.class);
		}
		public WarunekContext warunek(int i) {
			return getRuleContext(WarunekContext.class,i);
		}
		public List<Operator_logicznyContext> operator_logiczny() {
			return getRuleContexts(Operator_logicznyContext.class);
		}
		public Operator_logicznyContext operator_logiczny(int i) {
			return getRuleContext(Operator_logicznyContext.class,i);
		}
		public Zlozone_wyrazenie_logiczneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_zlozone_wyrazenie_logiczne; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterZlozone_wyrazenie_logiczne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitZlozone_wyrazenie_logiczne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitZlozone_wyrazenie_logiczne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Zlozone_wyrazenie_logiczneContext zlozone_wyrazenie_logiczne() throws RecognitionException {
		Zlozone_wyrazenie_logiczneContext _localctx = new Zlozone_wyrazenie_logiczneContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_zlozone_wyrazenie_logiczne);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(95);
				wyrazenie_logiczne();
				}
				break;
			case 2:
				{
				setState(96);
				warunek();
				}
				break;
			}
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					{
					setState(99);
					operator_logiczny();
					}
					setState(102);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(100);
						wyrazenie_logiczne();
						}
						break;
					case 2:
						{
						setState(101);
						warunek();
						}
						break;
					}
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Wyrazenie_logiczneContext extends ParserRuleContext {
		public List<WarunekContext> warunek() {
			return getRuleContexts(WarunekContext.class);
		}
		public WarunekContext warunek(int i) {
			return getRuleContext(WarunekContext.class,i);
		}
		public Operator_logicznyContext operator_logiczny() {
			return getRuleContext(Operator_logicznyContext.class,0);
		}
		public TerminalNode NO() { return getToken(RegulyBiznesoweParser.NO, 0); }
		public TerminalNode NZ() { return getToken(RegulyBiznesoweParser.NZ, 0); }
		public Wyrazenie_logiczneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wyrazenie_logiczne; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterWyrazenie_logiczne(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitWyrazenie_logiczne(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitWyrazenie_logiczne(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wyrazenie_logiczneContext wyrazenie_logiczne() throws RecognitionException {
		Wyrazenie_logiczneContext _localctx = new Wyrazenie_logiczneContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_wyrazenie_logiczne);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(109);
				match(NO);
				}
				break;
			}
			setState(112);
			warunek();
			{
			setState(113);
			operator_logiczny();
			}
			setState(114);
			warunek();
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(115);
				match(NZ);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WarunekContext extends ParserRuleContext {
		public List<NazwaContext> nazwa() {
			return getRuleContexts(NazwaContext.class);
		}
		public NazwaContext nazwa(int i) {
			return getRuleContext(NazwaContext.class,i);
		}
		public TerminalNode OPERATOR_POROWNANIA() { return getToken(RegulyBiznesoweParser.OPERATOR_POROWNANIA, 0); }
		public TerminalNode NUMERIC_VALUE() { return getToken(RegulyBiznesoweParser.NUMERIC_VALUE, 0); }
		public TerminalNode INT() { return getToken(RegulyBiznesoweParser.INT, 0); }
		public TerminalNode NO() { return getToken(RegulyBiznesoweParser.NO, 0); }
		public TerminalNode NZ() { return getToken(RegulyBiznesoweParser.NZ, 0); }
		public WarunekContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_warunek; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).enterWarunek(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegulyBiznesoweListener ) ((RegulyBiznesoweListener)listener).exitWarunek(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RegulyBiznesoweVisitor ) return ((RegulyBiznesoweVisitor<? extends T>)visitor).visitWarunek(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WarunekContext warunek() throws RecognitionException {
		WarunekContext _localctx = new WarunekContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_warunek);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NO) {
				{
				setState(118);
				match(NO);
				}
			}
